--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,15 @@ body {
   grid-column: 1 / 6;
   grid-row: 7;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;  
+  margin-top: -160px;
+}
+.spacer {
+  height: 40px;
+  background-color: white;
 }
 .km-text {
   font-size: 5rem;
@@ -134,7 +143,7 @@ body {
 }
 #chart {
   position: absolute;
-  top: 24em;
+  top: 20em;
   left: 4em;
   color: #0F091F;
 }
@@ -479,4 +488,51 @@ input[type="checkbox"].check-custom.toggle-switch:checked
 .tooltip-right:after {
   margin-left: 0;
   margin-bottom: -16px;
+}
+
+/* spinner */
+
+.spinner {
+  margin: 100px auto 0;
+  width: 70px;
+  text-align: center;
+  position: absolute;
+  left: 155px;
+  top: 90px;  
+}
+
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #6F00F6;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 2.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 2.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% { 
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
 }
