--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -594,70 +594,28 @@ input[type="checkbox"].check-custom.toggle-switch:checked
   }
 }
 
-
-
-/* The pp-select */
-.pp-select {
-  display: inline;
-  position: relative;
-  padding-left: 35px;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.checked {
+  font-size: 4em;
+  background: #6F00F6;
+  color: #0F091F !important;
 }
 
-/* Hide the browser's default checkbox */
-.pp-select input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
+#checkDay {
+  padding: 8px;
+  font-size: .6em;
+  padding-left: 15px;
+  border: 1px #6F00F6 solid;
+  border-top-left-radius: 2em;
+  border-bottom-left-radius: 2em;
+}
+#checkWeek {
+  padding: 8px;
+  padding-right: 15px;
+  font-size: .6em;
+  border: 1px #6F00F6 solid;
+  border-top-right-radius: 2em;
+  border-bottom-right-radius: 2em;
 }
 
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 20px;
-  width: 20px;
-  background-color: #6F00F6;
-}
 
-/* On mouse-over, add a grey background color */
-.pp-select:hover input ~ .checkmark {
-  background-color: #ccc;
-}
 
-/* When the checkbox is checked, add a blue background */
-.pp-select input:checked ~ .checkmark {
-  background-color: #2196F3;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-.pp-select input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.pp-select .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
