--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,9 @@ Very Deep Purple: 0F091F
   font-family: Space-l;
   src: url("../fonts/SpaceGrotesk-Light.woff");
 }
-
+.no-drag {
+  -webkit-app-region: no-drag;
+}
 body {
   background-color: #0f091f;
   color: #eee;
@@ -38,7 +40,7 @@ body {
 }
 
 .brand {
-  width: 10em;
+  width: 15em;
 }
 .version {
   position: absolute;
@@ -56,6 +58,7 @@ a {
 .icon {
   height: 12px;
 }
+
 /* app config area */
 .config {
   color: rgb(220, 220, 220);
@@ -164,9 +167,11 @@ a {
 .key-managment {
   border: 1px solid #5f30cd;
   color: #5f30cd;
-  padding: 5px 15px;
-  margin-right: 10px;
+  padding: 5px;
+  margin-left: -100px;
   cursor: pointer;
+  text-align: center;
+  margin-top: 5px;
 }
 
 
@@ -219,7 +224,7 @@ a {
 }
 #chart {
   position: absolute;
-  top: 20em;
+  top: 25em;
   left: 4em;
   color: #0F091F;
 }
@@ -590,8 +595,8 @@ input[type="checkbox"].check-custom.toggle-switch:checked
   width: 70px;
   text-align: center;
   position: absolute;
-  left: 155px;
-  top: 90px;
+  left: 180px;
+  top: 110px;
 }
 
 .spinner > div {
