--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,9 @@ Very Deep Purple: 0F091F
   font-family: Space-l;
   src: url("../fonts/SpaceGrotesk-Light.woff");
 }
-
+.no-drag {
+  -webkit-app-region: no-drag;
+}
 body {
   background-color: #0f091f;
   color: #eee;
@@ -38,14 +40,7 @@ body {
 }
 
 .brand {
-  width: 10em;
-}
-.version {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  color: #6f00f6;
-  padding: 2em;
+  width: 15em;
 }
 
 a {
@@ -56,6 +51,7 @@ a {
 .icon {
   height: 12px;
 }
+
 /* app config area */
 .config {
   color: rgb(220, 220, 220);
@@ -164,9 +160,11 @@ a {
 .key-managment {
   border: 1px solid #5f30cd;
   color: #5f30cd;
-  padding: 5px 15px;
-  margin-right: 10px;
+  padding: 5px;
+  margin-left: -100px;
   cursor: pointer;
+  text-align: center;
+  margin-top: 5px;
 }
 
 
@@ -219,7 +217,7 @@ a {
 }
 #chart {
   position: absolute;
-  top: 20em;
+  top: 25em;
   left: 4em;
   color: #0F091F;
 }
@@ -231,7 +229,20 @@ a {
   color: rgb(162, 56, 162);
   padding: 2em;
 }
+#documentation-link {
+  cursor: pointer;
 
+  color: gray;
+  font-size: 0.8em;
+}
+.version {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  color: #6f00f6;
+  padding: 2em;
+  font-size: 0.8em;
+}
 
 /* glow */
     .blob {
@@ -267,19 +278,73 @@ a {
       }
     }
 
-
+/* Error */
+#error-close {
+  margin-left: -40px;
+  padding-right: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid white;
+  cursor: pointer;
+}
 .errors {
   width: 100%;
   position: absolute;
   bottom: 0;
   left: 0;
-  background: red;
+  background: rgb(148, 15, 15);
   padding: 2em;
   padding-left: 5em;
+  display: flex;
+}
+.error-message {
+  width: 70%;
+  padding-left: 30px;
+}
+#github-icon {
+  margin-left: 30px;
+  font-size: .7em;
+  display: flex;
+  justify-content: space-around;
+  border-left: 1px solid white;
+  cursor: pointer;
+}
+#github-icon img {
+  width: 20px;
+  padding-left: 25px;
+}
+#github-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+}
+
+
+.hide {
   visibility: hidden;
 }
-.error-message img {
-  height: 50px;
+.flicker-in {
+  animation: flicker-in 2s;
+}
+@keyframes flicker-in {
+  0% {
+  transform: translate3d(100%, 0, 0) skewX(-30deg);
+  opacity: 0;
+  }
+  60% {
+  transform: skewX(20deg);
+  opacity: 1;
+  }
+  80% {
+  transform: skewX(-5deg);
+  opacity: 1;
+  }
+  100% {
+  transform: none;
+  opacity: 1;
+  }
 }
 
 
@@ -590,8 +655,8 @@ input[type="checkbox"].check-custom.toggle-switch:checked
   width: 70px;
   text-align: center;
   position: absolute;
-  left: 155px;
-  top: 90px;
+  left: 180px;
+  top: 110px;
 }
 
 .spinner > div {
