add key managment gui

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,6 +138,7 @@ a {
   border-radius: 50%;
   width: 50px;
   height: 50px;
+  cursor: pointer;
 }
 
 /* toggle classes */
@@ -157,7 +158,7 @@ a {
   filter: opacity(.4);
 }
 
-.key-managment {
+#key-managment {
   border: 1px solid #5f30cd;
   color: #5f30cd;
   padding: 5px;
@@ -165,6 +166,9 @@ a {
   cursor: pointer;
   text-align: center;
   margin-top: 5px;
+}
+#key-managment img {
+  width: 20px;
 }
 
 
@@ -344,6 +348,37 @@ a {
   100% {
   transform: none;
   opacity: 1;
+  }
+}
+
+.bounceOutDown {
+  animation: bounceOutDown 2s;
+}
+
+@-webkit-keyframes bounceOutDown {
+  20% {
+  transform: translate3d(0, 10px, 0);
+  }
+  40%, 45% {
+  opacity: 1;
+  transform: translate3d(0, -20px, 0);
+  }
+  100% {
+  opacity: 0;
+  transform: translate3d(0, 2000px, 0);
+  }
+  }
+  @keyframes bounceOutDown {
+  20% {
+  transform: translate3d(0, 10px, 0);
+  }
+  40%, 45% {
+  opacity: 1;
+  transform: translate3d(0, -20px, 0);
+  }
+  100% {
+  opacity: 0;
+  transform: translate3d(0, 2000px, 0);
   }
 }
 
@@ -720,5 +755,117 @@ input[type="checkbox"].check-custom.toggle-switch:checked
   cursor: pointer; 
 }
 
-
-
+@keyframes rotate {
+  16.67% {
+    box-shadow:
+      -30px -50px 0 15px #76bdd1,
+       30px -50px 0 15px #6cce74,
+      60px    0px 0 15px #c18d46,
+       30px  50px 0 15px #c14745,
+      -30px  50px 0 15px #2e1e5b,
+     -60px    0px 0 15px #9c37a6;
+  }
+  33.33%   { 
+    box-shadow:
+      -30px -50px 0 15px #9c37a6,
+       30px -50px 0 15px #76bdd1,
+      60px    0px 0 15px #6cce74,
+       30px  50px 0 15px #c18d46,
+      -30px  50px 0 15px #c14745,
+     -60px    0px 0 15px #2e1e5b;
+  }
+  50%      { 
+    box-shadow:
+      -30px -50px 0 15px #2e1e5b,
+       30px -50px 0 15px #9c37a6,
+      60px    0px 0 15px #76bdd1,
+       30px  50px 0 15px #6cce74,
+      -30px  50px 0 15px #c18d46,
+     -60px    0px 0 15px #c14745;
+  }
+  66.67%   { 
+    box-shadow:
+      -30px -50px 0 15px #c14745,
+       30px -50px 0 15px #2e1e5b,
+      60px    0px 0 15px #9c37a6,
+       30px  50px 0 15px #76bdd1,
+      -30px  50px 0 15px #6cce74,
+     -60px    0px 0 15px #c18d46;
+  }
+  88.88%   { 
+    box-shadow:
+      -30px -50px 0 15px #c18d46,
+       30px -50px 0 15px #c14745,
+      60px    0px 0 15px #2e1e5b,
+       30px  50px 0 15px #9c37a6,
+      -30px  50px 0 15px #76bdd1,
+     -60px    0px 0 15px #6cce74;
+  }
+  100% {
+    transform:rotate(-360deg);
+    box-shadow:
+      -30px -50px 0 15px #6cce74,
+       30px -50px 0 15px #c18d46,
+      60px    0px 0 15px #c14745,
+       30px  50px 0 15px #2e1e5b,
+      -30px  50px 0 15px #9c37a6,
+     -60px    0px 0 15px #76bdd1;
+  }
+}
+@-webkit-keyframes rotate {
+  16.67% {
+    box-shadow:
+      -30px -50px 0 15px #76bdd1,
+       30px -50px 0 15px #6cce74,
+      60px    0px 0 15px #c18d46,
+       30px  50px 0 15px #c14745,
+      -30px  50px 0 15px #2e1e5b,
+     -60px    0px 0 15px #9c37a6;
+  }
+  33.33%   { 
+    box-shadow:
+      -30px -50px 0 15px #9c37a6,
+       30px -50px 0 15px #76bdd1,
+      60px    0px 0 15px #6cce74,
+       30px  50px 0 15px #c18d46,
+      -30px  50px 0 15px #c14745,
+     -60px    0px 0 15px #2e1e5b;
+  }
+  50%      { 
+    box-shadow:
+      -30px -50px 0 15px #2e1e5b,
+       30px -50px 0 15px #9c37a6,
+      60px    0px 0 15px #76bdd1,
+       30px  50px 0 15px #6cce74,
+      -30px  50px 0 15px #c18d46,
+     -60px    0px 0 15px #c14745;
+  }
+  66.67%   { 
+    box-shadow:
+      -30px -50px 0 15px #c14745,
+       30px -50px 0 15px #2e1e5b,
+      60px    0px 0 15px #9c37a6,
+       30px  50px 0 15px #76bdd1,
+      -30px  50px 0 15px #6cce74,
+     -60px    0px 0 15px #c18d46;
+  }
+  88.88%   { 
+    box-shadow:
+      -30px -50px 0 15px #c18d46,
+       30px -50px 0 15px #c14745,
+      60px    0px 0 15px #2e1e5b,
+       30px  50px 0 15px #9c37a6,
+      -30px  50px 0 15px #76bdd1,
+     -60px    0px 0 15px #6cce74;
+  }
+  100% {
+    -webkit-transform:rotate(-360deg);
+    box-shadow:
+      -30px -50px 0 15px #6cce74,
+       30px -50px 0 15px #c18d46,
+      60px    0px 0 15px #c14745,
+       30px  50px 0 15px #2e1e5b,
+      -30px  50px 0 15px #9c37a6,
+     -60px    0px 0 15px #76bdd1;
+  }
+}
