--- a/components/password-modal.html
+++ b/components/password-modal.html
@@ -74,15 +74,19 @@
       position: absolute;
       bottom: 20px;
       right: 20px;
-      background-color: #dd003f;
-      color: white;
+      color: #dd003f;
       padding: 10px 20px;
-      border: none;
+      border: 1px solid #dd003f;
       font-size: 1em;
       margin-top: 1em;
       cursor: pointer;
     }
 
+    #close-button {
+      position: absolute;
+      right: 30px;
+      bottom: 20px;
+    }
 
     .container {
       display: flex;
@@ -104,6 +108,7 @@
       left: 0;
       bottom: 70px;
       padding: 2em;
+      font-size: .8em;
     }
 
     p {
@@ -127,10 +132,10 @@
         <input type="text" placeholder="Password">
         <span id="exportButton">Enter</span>
       </div>
-      <span id="close-button" onclick="closeThis()">Close</span>
+      <span class="close-button" id="close-button" onclick="closeThis()">Close</span>
     </div>
     <div class="message">
-      <h2>Forgot your password?</h2>
+      <h4>Forgot your password?</h4>
       <div>We cannot recover your password! If you lost your password the only way to recover your account is with
         your 12 word phrase.
       </div>
