--- a/components/generate-keys.html
+++ b/components/generate-keys.html
@@ -14,7 +14,7 @@
       Very Deep Purple: 0F091F
     */
     body {
-      -webkit-app-region: no-drag;
+      -webkit-app-region: drag;
     }
 
     .form-area {
@@ -41,7 +41,7 @@
       width: 50%;
       color: #ffffff;
       margin-left: 20px;
-      background: hsl(0deg 89% 64% / 90%);
+      background: #c65656;
       border-radius: 5px;
       text-align: center;
       visibility: hidden;
@@ -52,19 +52,6 @@
       bottom: 20px;
       right: 20px;
       background-color: #6F00F6;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      font-size: 1em;
-      margin-top: 1em;
-      cursor: pointer;
-    }
-
-    #close-button {
-      position: absolute;
-      bottom: 20px;
-      right: 180px;
-      background-color: #dd003f;
       color: white;
       padding: 10px 20px;
       border: none;
