Added password prompt when starting to mine

--- a/components/generate-keys.html
+++ b/components/generate-keys.html
@@ -111,7 +111,7 @@
       <h2>Create Private Key</h2>
       <div class="form-area">
         <form action="">
-          <input id="password" type="password" placeholder="Password" onkeyup="onPasswordKeyUp()">
+          <input id="password" type="password" placeholder="Password" onkeyup="onPasswordKeyUp()" autofocus>
           <input id="password-confirm" type="password" placeholder="Confirm Password" onkeyup="onPasswordKeyUp()">
           <span id="generate-button" onclick="generateKeys()">Generate Key</span>
           <span id="close-button" onclick="closeWindow()">Close</span>
