--- a/components/password-modal.html
+++ b/components/password-modal.html
@@ -48,7 +48,7 @@
       margin: 10px 30px;
     }
 
-    #exportButton {
+    #enter-button {
       position: relative;
       background-color: #6F00F6;
       color: white;
@@ -60,7 +60,7 @@
       float: right;
     }
 
-    #recoverButton {
+    #recover-button {
       position: absolute;
       color: #6F00F6;
       padding: 10px 20px;
@@ -129,20 +129,20 @@
 
     <div class="input-area">
       <div>
-        <input type="text" placeholder="Password">
-        <span id="exportButton">Enter</span>
+        <input id="password" type="password" placeholder="Password" autofocus>
+        <span id="enter-button" onclick="enterButton()">Enter</span>
       </div>
-      <span class="close-button" id="close-button" onclick="closeThis()">Close</span>
+      <span class="close-button" id="close-button" onclick="closeButton()">Close</span>
     </div>
     <div class="message">
       <h4>Forgot your password?</h4>
       <div>We cannot recover your password! If you lost your password the only way to recover your account is with
         your 12 word phrase.
       </div>
-      <div id="recoverButton" onclick="recoverKeys()">Recover with phrase</div>
+      <div id="recover-button" onclick="recoverKeys()">Recover with phrase</div>
     </div>
   </div>
-  <script src="../script.js"></script>
+  <script src="../assets/js/password-modal.js"></script>
   <script>
 
   </script>
