Do not transfom to upper case

--- a/components/manage-keys.html
+++ b/components/manage-keys.html
@@ -41,7 +41,6 @@
       text-align: center;
       display: flex;
       justify-content: center;
-      text-transform: uppercase;
     }
 
     #key div {
@@ -128,7 +127,7 @@
     <div id="public-key">
 
       <div id="key">
-        <div>Key:</div>
+        <div>Funding Address:</div>
         <div id="address-text" onClick='copyText(this)'></div>
       </div>
 
