--- a/components/manage-keys.html
+++ b/components/manage-keys.html
@@ -132,6 +132,7 @@
       </div>
 
     </div>
+    <div id="qr-code"></div>
     <div class="input-area">
       <div>
         <input id="password" type="password" placeholder="Password">
