match button styles. style private key dialog box

--- a/components/keys-confirm.html
+++ b/components/keys-confirm.html
@@ -121,40 +121,40 @@
       Enter Your 12 Word Phrase:
       <div id="word-container">
         <div>
-          <input type="text" placeholder="Word 1" class="non-match">
+          <input id="Word1" type="text" placeholder="Word 1" class="non-match">
         </div>
         <div>
-          <input type="text" placeholder="Word 2" class="word-match">
+          <input id="Word2" type="text" placeholder="Word 2" class="word-match">
         </div>
         <div>
-          <input type="text" placeholder="Word 3">
+          <input id="Word3" type="text" placeholder="Word 3">
         </div>
         <div>
-          <input type="text" placeholder="Word 4">
+          <input id="Word4" type="text" placeholder="Word 4">
         </div>
         <div>
-          <input type="text" placeholder="Word 5">
+          <input id="Word5" type="text" placeholder="Word 5">
         </div>
         <div>
-          <input type="text" placeholder="Word 6">
+          <input id="Word6" type="text" placeholder="Word 6">
         </div>
         <div>
-          <input type="text" placeholder="Word 7">
+          <input id="Word7" type="text" placeholder="Word 7">
         </div>
         <div>
-          <input type="text" placeholder="Word 8">
+          <input id="Word8" type="text" placeholder="Word 8">
         </div>
         <div>
-          <input type="text" placeholder="Word 9">
+          <input id="Word9" type="text" placeholder="Word 9">
         </div>
         <div>
-          <input type="text" placeholder="Word 10">
+          <input id="Word10" type="text" placeholder="Word 10">
         </div>
         <div>
-          <input type="text" placeholder="Word 11">
+          <input id="Word11" type="text" placeholder="Word 11">
         </div>
         <div>
-          <input type="text" placeholder="Word 12">
+          <input id="Word12" type="text" placeholder="Word 12">
         </div>
       </div>
     </div>
