--- a/components/password-modal.html
+++ b/components/password-modal.html
@@ -62,9 +62,9 @@
 
     #recover-button {
       position: absolute;
-      color: #6F00F6;
+      background-color: #6F00F6;
+      color: white;
       padding: 10px 20px;
-      border: 1px #6F00F6 solid;
       font-size: 1em;
       margin-top: 1em;
       cursor: pointer;
@@ -74,9 +74,9 @@
       position: absolute;
       bottom: 20px;
       right: 20px;
-      color: #dd003f;
+      background-color: #dd003f;
+      color: white;
       padding: 10px 20px;
-      border: 1px solid #dd003f;
       font-size: 1em;
       margin-top: 1em;
       cursor: pointer;
@@ -106,7 +106,7 @@
       margin-top: 100px;
       width: 50%;
       left: 0;
-      bottom: 70px;
+      bottom: 45px;
       padding: 2em;
       font-size: .8em;
     }
