--- a/components/export-confirmation.html
+++ b/components/export-confirmation.html
@@ -1,88 +1,96 @@
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="../assets/css/style.css">
-   <style>
-     /*
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../assets/css/style.css">
+  <style>
+    /*
        Colors:
        Green: 34DD00
        Red: DD003F
        Light Purple: 6F00F6
        Very Deep Purple: 0F091F
      */
-     body {
-       color: white;
-       -webkit-app-region: no-drag;
-       background-color: #0F091F;
-     }
+    body {
+      color: white;
+      -webkit-app-region: no-drag;
+      background-color: #0F091F;
+    }
 
-     #export-warning {
-       color: red;
-       font-size: 0.8em;
-       text-align: center;
-     }
+    #export-warning {
+      font-size: 0.8em;
+      text-align: center;
+    }
 
-     #close-button {
-       position: absolute;
-       bottom: 20px;
-       right: 20px;
-       background-color: #dd003f;
-       color: white;
-       padding: 10px 20px;
-       border: none;
-       font-size: 1em;
-       margin-top: 1em;
-       cursor: pointer;
-     }
+    #close-button {
+      border-bottom: 1px solid #DD003F;
+      color: #DD003F;
+      padding: 10px 20px;
+      font-size: 1em;
+      margin-top: 1em;
+      cursor: pointer;
+      font-weight: bold;
+    }
 
-     #confirm-button {
-       position: relative;
-       background-color: #6F00F6;
-       color: white;
-       padding: 10px 20px;
-       border: none;
-       font-size: 1em;
-       margin-top: 1em;
-       cursor: pointer;
-       float: right;
-     }
+    #confirm-button {
+      position: relative;
+      color: white;
+      padding: 10px 20px;
+      border-bottom: 1px solid white;
+      font-size: 1em;
+      margin-top: 1em;
+      cursor: pointer;
+      float: right;
+      margin-right: 15px;
+    }
 
-     .container {
-       display: flex;
-       flex-direction: column;
-       align-content: center;
-       align-items: center;
-       padding: 1.4em;
-       margin-top: 3em;
-     }
+    #confirmations {
+      font-size: .7em;
+      display: flex;
+      flex-direction: row;
+      align-content: center;
+      align-items: center;
+    }
 
-     .input-area {
-       width: 400px;
-     }
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      align-items: center;
+      padding: 1.4em;
+      margin-top: 3em;
+    }
 
-     .message {
-       margin-top: 100px;
-     }
+    .input-area {
+      width: 400px;
+    }
 
-     p {
-       font-size: .8em;
-     }
+    .message {
+      margin-top: 100px;
+    }
 
-     .warning {
-       position: relative;
-       top: 100px;
-     }
-   </style>
+    p {
+      font-size: .8em;
+    }
 
- </head>
+    .warning {
+      position: relative;
+      top: 100px;
+    }
+  </style>
 
- <body>
-   <div class="container">
-     <div id="export-warning">Are you sure you want to export your key?</div>
-     <span id="confirm-button" onClick="confirm()">Yes</span>
-     <span id="close-button" onclick="closeWindow()">No</span>
-   </div>
-   <script src="../assets/js/export-confirmation.js"></script>
- </body>
+</head>
 
- </html>
+<body>
+  <div class="container">
+    <div id="export-warning">
+      Are you sure you want to export your private keys?
+    </div>
+    <div id="confirmations">
+      <span id="confirm-button" onClick="confirm()">I agree</span><span id="close-button" onclick="closeWindow()">No
+        thanks, Go Back!</span>
+    </div>
+  </div>
+  <script src="../assets/js/export-confirmation.js"></script>
+</body>
+
+</html>
