Change button labels

--- a/components/confirm-seed.html
+++ b/components/confirm-seed.html
@@ -176,8 +176,8 @@
         </table>
       </div>
       <div>
-         <span id="confirm-button" onclick="confirmSeed()">Recover Key</span>
-         <span id="close-button" onclick="closeWindow()">Close</span>
+         <span id="confirm-button" onclick="confirmSeed()">Confirm</span>
+         <span id="close-button" onclick="closeWindow()">Cancel</span>
       </div>
     </div>
   </div>
