--- a/components/generate-keys.html
+++ b/components/generate-keys.html
@@ -128,7 +128,7 @@
           <input id="password-confirm" type="password" placeholder="Confirm Password" onkeyup="onPasswordKeyUp()">
           <span id="recover-button" onclick="recoverKeys()">Recover Key</span>
           <span id="generate-button" onclick="generateKeys()">Generate Key</span>
-          <span id="close-button" onclick="closeWindow()">Close</span>
+          <span id="close-button" onclick="closeWindow()">Cancel</span>
         </form>
         <div id="password-feedback">
         </div>
